--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -31,7 +31,7 @@
         android:layout_weight="3"
         android:ems="10"
         android:hint="%"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:textAlignment="center"
         android:textSize="20sp" />
 </LinearLayout>
