--- a/app/src/main/res/layout/listview_layout_valores.xml
+++ b/app/src/main/res/layout/listview_layout_valores.xml
@@ -26,7 +26,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="0"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:textAlignment="center"
             android:textSize="16sp" />
 
@@ -37,7 +37,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="0"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:textAlignment="center"
             android:textSize="16sp" />
 
@@ -48,7 +48,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="0"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:textAlignment="center"
             android:textSize="16sp" />
 
@@ -59,7 +59,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="0"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:textAlignment="center"
             android:textSize="16sp" />
 
@@ -70,7 +70,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="0"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:textAlignment="center"
             android:textSize="16sp" />
 
@@ -81,7 +81,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="0"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:textAlignment="center"
             android:textSize="16sp" />
 
@@ -92,7 +92,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="0"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:textAlignment="center"
             android:textSize="16sp" />
 
@@ -103,7 +103,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="0"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:textAlignment="center"
             android:textSize="16sp" />
     </LinearLayout>
